// Vitest Snapshot v1

exports[`lib/notion/clear-completed > GET /notion/action/:key?action=clearCompleted > adds checklist block under empty stores 1`] = `
{
  "after": "store-2-id",
  "children": [
    {
      "object": "block",
      "to_do": {
        "rich_text": [],
      },
      "type": "to_do",
    },
  ],
}
`;

exports[`lib/notion/clear-completed > GET /notion/action/:key?action=clearCompleted > adds checklist block under empty stores 2`] = `
{
  "after": "store-4-id",
  "children": [
    {
      "object": "block",
      "to_do": {
        "rich_text": [],
      },
      "type": "to_do",
    },
  ],
}
`;

exports[`lib/notion/clear-completed > GET /notion/action/:key?action=clearCompleted > handles nested items 1`] = `
{
  "after": "recently-cleared-divider-id",
  "children": [
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Store 1",
            "text": {
              "content": "Store 1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "to_do": {
        "checked": false,
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Remove 1.1",
            "text": {
              "content": "Remove 1.1",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "type": "to_do",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Store 2",
            "text": {
              "content": "Store 2",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "to_do": {
        "checked": false,
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Remove 2.1",
            "text": {
              "content": "Remove 2.1",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "type": "to_do",
    },
    {
      "object": "block",
      "to_do": {
        "checked": false,
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Remove 2.2",
            "text": {
              "content": "Remove 2.2",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "type": "to_do",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Store 4",
            "text": {
              "content": "Store 4",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "to_do": {
        "checked": false,
        "children": [
          {
            "bulleted_list_item": {
              "color": "default",
              "rich_text": [
                {
                  "annotations": {
                    "bold": false,
                    "code": false,
                    "color": "default",
                    "italic": false,
                    "strikethrough": false,
                    "underline": false,
                  },
                  "href": null,
                  "plain_text": "Nested bullet",
                  "text": {
                    "content": "Nested bullet",
                    "link": null,
                  },
                  "type": "text",
                },
              ],
            },
            "object": "block",
            "type": "bulleted_list_item",
          },
        ],
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Remove 4.1",
            "text": {
              "content": "Remove 4.1",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "type": "to_do",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Store 5",
            "text": {
              "content": "Store 5",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "to_do": {
        "checked": false,
        "children": [
          {
            "object": "block",
            "to_do": {
              "color": "default",
              "rich_text": [
                {
                  "annotations": {
                    "bold": false,
                    "code": false,
                    "color": "default",
                    "italic": false,
                    "strikethrough": false,
                    "underline": false,
                  },
                  "href": null,
                  "plain_text": "Nested checkbox",
                  "text": {
                    "content": "Nested checkbox",
                    "link": null,
                  },
                  "type": "text",
                },
              ],
            },
            "type": "to_do",
          },
        ],
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Remove 5.1",
            "text": {
              "content": "Remove 5.1",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "type": "to_do",
    },
  ],
}
`;

exports[`lib/notion/clear-completed > GET /notion/action/:key?action=clearCompleted > prepends cleared items to Recently Cleared 1`] = `
{
  "after": "recently-cleared-divider-id",
  "children": [
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Store 1",
            "text": {
              "content": "Store 1",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "to_do": {
        "checked": false,
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Remove 1.1",
            "text": {
              "content": "Remove 1.1",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "type": "to_do",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Store 2",
            "text": {
              "content": "Store 2",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "to_do": {
        "checked": false,
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Remove 2.1",
            "text": {
              "content": "Remove 2.1",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "type": "to_do",
    },
    {
      "object": "block",
      "to_do": {
        "checked": false,
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Remove 2.2",
            "text": {
              "content": "Remove 2.2",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "type": "to_do",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Store 4",
            "text": {
              "content": "Store 4",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "to_do": {
        "checked": false,
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Remove 4.1",
            "text": {
              "content": "Remove 4.1",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "type": "to_do",
    },
    {
      "object": "block",
      "paragraph": {
        "rich_text": [
          {
            "plain_text": "Store 5",
            "text": {
              "content": "Store 5",
            },
            "type": "text",
          },
        ],
      },
      "type": "paragraph",
    },
    {
      "object": "block",
      "to_do": {
        "checked": false,
        "rich_text": [
          {
            "annotations": {
              "bold": false,
              "code": false,
              "color": "default",
              "italic": false,
              "strikethrough": false,
              "underline": false,
            },
            "href": null,
            "plain_text": "Remove 5.1",
            "text": {
              "content": "Remove 5.1",
              "link": null,
            },
            "type": "text",
          },
        ],
      },
      "type": "to_do",
    },
  ],
}
`;
